--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <li>VELA HERRERA, EVER</li>
         <li>VELA MANUYAMA, TOMMY ALESSANDRO</li>  
     </ol>
-    <button><a href="c:\Users\WINDOWS\Documents\curos de html\perrito.jpg">Para mas archivos click aqui &#x1F600 &#x1F4BB</a></button>
+    <button><a href="/coyacc03/perrito.jpg">Para mas archivos click aqui &#x1F600 &#x1F4BB</a></button>
     <footer>
         <!-- Pie de página -->
         <p>Derechos de autor © 2023 Hans Melendez</p>
